// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionButton /> UI snapshots checkbox selected, without custom icon 1`] = `
.emotion-8 {
  border-radius: 4px;
  background-color: #ffffff;
  border: 1px solid #ededf0;
  box-shadow: 0px 8px 24px rgba(52,51,82,0.05);
  cursor: pointer;
  -webkit-transition: box-shadow 200ms;
  transition: box-shadow 200ms;
  padding: 1.5rem;
  margin-bottom: 1rem;
  width: 100%;
  text-align: left;
}

.emotion-8:hover {
  box-shadow: 0px 8px 24px rgba(52,51,82,0.10);
}

.emotion-8:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  border: 1px solid;
  border-color: #332e54;
  background: #ffffff;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 350ms;
  transition: all 350ms;
  border-radius: 4px;
  background: #332e54;
  border-color: #332e54;
}

.emotion-0 svg {
  opacity: 0;
  -webkit-transition: all 350ms;
  transition: all 350ms;
}

.emotion-0 svg {
  opacity: 1;
  color: #ffffff;
  fill: #ffffff;
}

.emotion-4 {
  margin-left: 1rem;
}

.emotion-2 {
  color: #524D6E;
  line-height: 1.5;
}

<button
  className="emotion-8 emotion-9"
  onClick={[Function]}
  role="checkbox"
  type="button"
>
  <div
    className="emotion-6 emotion-7"
  >
    <div
      className="emotion-0 emotion-1"
      selected={true}
    >
      <svg
        css={
          Object {
            "map": "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInN0eWxlLnRzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQVE0RSIsImZpbGUiOiJzdHlsZS50cyIsInNvdXJjZXNDb250ZW50IjpbImltcG9ydCB7IGNzcyB9IGZyb20gJ0BlbW90aW9uL2NvcmUnO1xuXG5pbXBvcnQgeyBBTklNQVRJT04gfSBmcm9tICcuLi8uLi9jb25zdGFudHMnO1xuXG5pbXBvcnQgeyBJY29uUHJvcHMgfSBmcm9tICcuJztcblxudHlwZSBJY29uU3R5bGVzUHJvcHMgPSBQaWNrPEljb25Qcm9wcywgJ2Rpc3BsYXlJbmxpbmUnIHwgJ2ZpbGwnIHwgJ3JvdGF0ZSc+O1xuXG5jb25zdCBpY29uU3R5bGVzID0gKHsgZGlzcGxheUlubGluZSwgZmlsbCwgcm90YXRlIH06IEljb25TdHlsZXNQcm9wcykgPT4gY3NzYFxuICBkaXNwbGF5OiAke2Rpc3BsYXlJbmxpbmUgPyAnaW5saW5lLWJsb2NrJyA6ICdibG9jayd9O1xuICB0cmFuc2Zvcm06IHJvdGF0ZSgke3JvdGF0ZX1kZWcpO1xuICBjb2xvcjogJHtmaWxsfTtcbiAgdHJhbnNpdGlvbjogY29sb3IgJHtBTklNQVRJT04uZGVmYXVsdFRpbWluZ30sXG4gICAgdHJhbnNmb3JtICR7QU5JTUFUSU9OLmRlZmF1bHRUaW1pbmd9O1xuYDtcblxuZXhwb3J0IGRlZmF1bHQge1xuICBpY29uU3R5bGVzLFxufTtcbiJdfQ== */",
            "name": "vpdwsp",
            "next": undefined,
            "styles": "display:block;transform:rotate(0deg);color:;transition:color 350ms,transform 350ms;",
            "toString": [Function],
          }
        }
        height={16}
        width={16}
      />
    </div>
    <div
      className="emotion-4 emotion-5"
    >
      <div
        className="emotion-2 emotion-3"
      >
        checkbox text
      </div>
    </div>
  </div>
</button>
`;

exports[`<OptionButton /> UI snapshots radio unselected, with icon node prop 1`] = `
.emotion-8 {
  border-radius: 4px;
  background-color: #ffffff;
  border: 1px solid #ededf0;
  box-shadow: 0px 8px 24px rgba(52,51,82,0.05);
  cursor: pointer;
  -webkit-transition: box-shadow 200ms;
  transition: box-shadow 200ms;
  padding: 1.5rem;
  margin-bottom: 1rem;
  width: 100%;
  text-align: left;
}

.emotion-8:hover {
  box-shadow: 0px 8px 24px rgba(52,51,82,0.10);
}

.emotion-8:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-left: 1rem;
}

.emotion-2 {
  color: #524D6E;
  line-height: 1.5;
}

.emotion-0 {
  border: 1px solid;
  border-color: #332e54;
  background: #ffffff;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 350ms;
  transition: all 350ms;
  border-radius: 50%;
  width: 48px;
  height: 48px;
}

.emotion-0 svg {
  opacity: 0;
  -webkit-transition: all 350ms;
  transition: all 350ms;
}

.emotion-0 svg {
  opacity: 1;
  color: #332e54;
  fill: #332e54;
}

<button
  className="emotion-8 emotion-9"
  onClick={[Function]}
  role="radio"
  type="button"
>
  <div
    className="emotion-6 emotion-7"
  >
    <div
      className="emotion-0 emotion-1"
      selected={false}
    >
      <svg
        css={
          Object {
            "map": "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInN0eWxlLnRzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQVE0RSIsImZpbGUiOiJzdHlsZS50cyIsInNvdXJjZXNDb250ZW50IjpbImltcG9ydCB7IGNzcyB9IGZyb20gJ0BlbW90aW9uL2NvcmUnO1xuXG5pbXBvcnQgeyBBTklNQVRJT04gfSBmcm9tICcuLi8uLi9jb25zdGFudHMnO1xuXG5pbXBvcnQgeyBJY29uUHJvcHMgfSBmcm9tICcuJztcblxudHlwZSBJY29uU3R5bGVzUHJvcHMgPSBQaWNrPEljb25Qcm9wcywgJ2Rpc3BsYXlJbmxpbmUnIHwgJ2ZpbGwnIHwgJ3JvdGF0ZSc+O1xuXG5jb25zdCBpY29uU3R5bGVzID0gKHsgZGlzcGxheUlubGluZSwgZmlsbCwgcm90YXRlIH06IEljb25TdHlsZXNQcm9wcykgPT4gY3NzYFxuICBkaXNwbGF5OiAke2Rpc3BsYXlJbmxpbmUgPyAnaW5saW5lLWJsb2NrJyA6ICdibG9jayd9O1xuICB0cmFuc2Zvcm06IHJvdGF0ZSgke3JvdGF0ZX1kZWcpO1xuICBjb2xvcjogJHtmaWxsfTtcbiAgdHJhbnNpdGlvbjogY29sb3IgJHtBTklNQVRJT04uZGVmYXVsdFRpbWluZ30sXG4gICAgdHJhbnNmb3JtICR7QU5JTUFUSU9OLmRlZmF1bHRUaW1pbmd9O1xuYDtcblxuZXhwb3J0IGRlZmF1bHQge1xuICBpY29uU3R5bGVzLFxufTtcbiJdfQ== */",
            "name": "vpdwsp",
            "next": undefined,
            "styles": "display:block;transform:rotate(0deg);color:;transition:color 350ms,transform 350ms;",
            "toString": [Function],
          }
        }
        height={16}
        width={16}
      />
    </div>
    <div
      className="emotion-4 emotion-5"
    >
      <div
        className="emotion-2 emotion-3"
      >
        radio text
      </div>
    </div>
  </div>
</button>
`;
